--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.nanohttpd</groupId>
-            <artifactId>nanohttpd-webserver</artifactId>
-            <version>2.3.1</version>
-            <scope>compile</scope>
+            <groupId>net.pl3x.map.hook.undertow</groupId>
+            <artifactId>UndertowHook</artifactId>
+            <version>2.2.3</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <repositories>
@@ -46,22 +46,6 @@
                     <source>11</source>
                     <target>11</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
         <resources>
