--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,24 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.pl3x.map.hook.undertow</groupId>
-            <artifactId>UndertowHook</artifactId>
-            <version>2.2.3</version>
+            <groupId>net.pl3x.map</groupId>
+            <artifactId>Pl3xMapServer</artifactId>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
     <repositories>
         <repository>
-            <id>purpur-repo</id>
+            <id>pl3x-repo</id>
             <url>https://repo.pl3x.net/</url>
         </repository>
     </repositories>
+    <distributionManagement>
+        <repository>
+            <id>pl3x-repo</id>
+            <url>http://repo.pl3x.net/</url>
+        </repository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
