--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         </repository>
     </distributionManagement>
     <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <defaultGoal>clean package install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
