some file api changes, and fix async nag on /stop

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </distributionManagement>
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
-        <defaultGoal>clean package install</defaultGoal>
+        <defaultGoal>clean install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
