Bring up to date

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
-githubUrl=https://github.com/pl3xgaming/Pl3xMap/
+githubUrl=https://github.com/jpenilla/Pl3xMap/
 
 org.gradle.parallel=true
+org.gradle.caching=true
