--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-githubUrl=https://github.com/jpenilla/Pl3xMap/
+githubUrl=https://github.com/jpenilla/squaremap/
 
 org.gradle.parallel=true
 org.gradle.caching=true
