Add VanillaGradle and loom caches to caching config

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
+            .gradle/caches/VanillaGradle
+            .gradle/loom-cache
             paper/.gradle/caches/paperweight
           key: ${{ runner.os }}-gradle1-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
