Improve mapworld and level arguments

--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -141,7 +141,7 @@ dependencies:
         name: cardinal-components-entity
         version: { ref: cardinalComponents }
 
-    # build-logic
+    # buildSrc
     indraCommon:
         group: net.kyori
         name: indra-common
