--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -7,7 +7,7 @@ plugins:
     org.spongepowered.gradle.plugin: 2.0.0
     xyz.jpenilla.run-paper: 1.0.6
     net.minecrell.plugin-yml.bukkit: 0.5.1
-    io.papermc.paperweight.userdev: 1.3.3
+    io.papermc.paperweight.userdev: 1.3.4-SNAPSHOT
     quiet-fabric-loom: 0.10-SNAPSHOT
 
 versions:
