--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -21,11 +21,11 @@ versions:
     paperApi: 1.18.1-R0.1-SNAPSHOT
     bStats: 2.2.1
     fabricApi: 0.45.0+1.18
-    fabricLoader: 0.12.12
+    fabricLoader: 0.13.0
     cardinalComponents: 4.0.1
 
     # buildSrc
-    indra: 2.0.6
+    indra: 2.1.1
     licenser: 0.6.1
     shadow: 7.1.2
     vanillaGradle: 0.2.1-SNAPSHOT
@@ -145,6 +145,10 @@ dependencies:
     indraCommon:
         group: net.kyori
         name: indra-common
+        version: { ref: indra }
+    indraPublishingSonatype:
+        group: net.kyori
+        name: indra-publishing-sonatype
         version: { ref: indra }
     licenser:
         group: gradle.plugin.org.cadixdev.gradle
