--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -12,17 +12,17 @@ plugins:
 
 versions:
     minecraft: 1.18.1
-    checkerQual: 3.21.1
+    checkerQual: 3.21.2
     cloud: 1.7.0-SNAPSHOT
     configurate: 4.1.2
     adventure: 4.9.3
     adventurePlatformFabric: 5.0.0
     miniMessage: 4.2.0-SNAPSHOT
     paperApi: 1.18.1-R0.1-SNAPSHOT
-    bStats: 2.2.1
-    fabricApi: 0.45.0+1.18
-    fabricLoader: 0.13.0
-    cardinalComponents: 4.0.1
+    bStats: 3.0.0
+    fabricApi: 0.46.4+1.18
+    fabricLoader: 0.13.1
+    cardinalComponents: 4.1.2
 
     # buildSrc
     indra: 2.1.1
@@ -133,11 +133,11 @@ dependencies:
         version: { ref: minecraft }
 
     cardinalComponentsBase:
-        group: io.github.onyxstudios.Cardinal-Components-API
+        group: dev.onyxstudios.cardinal-components-api
         name: cardinal-components-base
         version: { ref: cardinalComponents }
     cardinalComponentsEntity:
-        group: io.github.onyxstudios.Cardinal-Components-API
+        group: dev.onyxstudios.cardinal-components-api
         name: cardinal-components-entity
         version: { ref: cardinalComponents }
 
