--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -19,9 +19,9 @@ versions:
     adventurePlatformFabric: 5.4.0-SNAPSHOT
     paperApi: 1.19-R0.1-SNAPSHOT
     bStats: 3.0.0
-    fabricApi: 0.56.1+1.19
+    fabricApi: 0.57.0+1.19
     fabricLoader: 0.14.8
-    cardinalComponents: 5.0.0-beta.1
+    cardinalComponents: 5.0.1
     guice: 5.1.0
 
     # buildSrc
