--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
           path: |
             .gradle/caches/VanillaGradle
             .gradle/loom-cache
+            paper/.gradle/caches/paperweight
           key: ${{ runner.os }}-project-local-gradle-caches-${{ hashFiles('**/libs.versions.yml', '**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-project-local-gradle-caches-
