--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -8,7 +8,7 @@ plugins:
     xyz.jpenilla.run-paper: 2.0.1
     net.minecrell.plugin-yml.bukkit: 0.5.3
     io.papermc.paperweight.userdev: 1.5.2
-    dev.architectury.loom: 1.1-SNAPSHOT
+    io.papermc.hangar-publish-plugin: 0.0.3
 
 versions:
     minecraft: 1.19.3
@@ -18,6 +18,7 @@ versions:
     cloudSponge: 1.8.0-SNAPSHOT
     configurate: 4.1.2
     adventure: 4.12.0
+    examination: 1.3.0
     adventurePlatformFabric: 5.6.1
     paperApi: 1.19.3-R0.1-SNAPSHOT
     bStats: 3.0.0
@@ -25,12 +26,15 @@ versions:
     fabricLoader: 0.14.11
     cardinalComponents: 5.1.0
     guice: 5.1.0
+    forge: 1.19.3-44.1.0
 
     # buildSrc
     indra: 3.0.1
     licenser: 0.6.1
     shadow: 8.1.0
     vanillaGradle: 0.2.1-20220508.185818-34
+    minotaur: 2.7.3
+    loom: 1.1-SNAPSHOT
 
 dependencies:
     guice:
@@ -62,6 +66,17 @@ dependencies:
         group: net.kyori
         name: adventure-platform-fabric
         version: { ref: adventurePlatformFabric }
+    adventureKey:
+        group: net.kyori
+        name: adventure-key
+    examinationApi:
+        group: net.kyori
+        name: examination-api
+        version: { ref: examination }
+    examinationString:
+        group: net.kyori
+        name: examination-string
+        version: { ref: examination }
 
     cloudCore:
         group: cloud.commandframework
@@ -159,6 +174,11 @@ dependencies:
         name: cardinal-components-entity
         version: { ref: cardinalComponents }
 
+    forge:
+        group: net.minecraftforge
+        name: forge
+        version: { ref: forge }
+
     # buildSrc
     indraCommon:
         group: net.kyori
@@ -180,5 +200,13 @@ dependencies:
         group: org.spongepowered
         name: vanillagradle
         version: { ref: vanillaGradle }
+    minotaur:
+        group: com.modrinth.minotaur
+        name: Minotaur
+        version: { ref: minotaur }
+    loom:
+        group: dev.architectury
+        name: architectury-loom
+        version: { ref: loom }
 
 bundles: []
