include adventure json serializer on forge

--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -59,6 +59,9 @@ dependencies:
     adventureTextSerializerGson:
         group: net.kyori
         name: adventure-text-serializer-gson
+    adventureTextSerializerJson:
+        group: net.kyori
+        name: adventure-text-serializer-json
     miniMessage:
         group: net.kyori
         name: adventure-text-minimessage
