--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -10,31 +10,31 @@ plugins:
     io.papermc.hangar-publish-plugin: 0.0.3
 
 versions:
-    minecraft: 1.19.4
+    minecraft: '1.20.1'
     checkerQual: 3.32.0
     cloud: 1.8.3
-    cloudForge: 1.0.0+1.19.4-SNAPSHOT
+    cloudForge: 1.0.0+1.20-SNAPSHOT
     cloudSponge: 1.8.0-SNAPSHOT
     configurate: 4.1.2
-    adventure: 4.13.0
+    adventure: 4.14.0
     examination: 1.3.0
-    adventurePlatformFabric: 5.8.0
-    paperApi: 1.19.4-R0.1-SNAPSHOT
+    adventurePlatformFabric: 5.10.0-SNAPSHOT
+    paperApi: 1.20-R0.1-SNAPSHOT
     bStats: 3.0.0
-    fabricApi: 0.76.0+1.19.4
-    fabricLoader: 0.14.17
-    cardinalComponents: 5.1.0
+    fabricApi: 0.83.0+1.20.1
+    fabricLoader: 0.14.21
+    cardinalComponents: 5.2.1
     guice: 5.1.0
-    forge: 1.19.4-45.0.18
+    forge: 1.20.1-47.0.0
 
     # buildSrc
     indra: 3.0.1
     licenser: 0.6.1
-    shadow: 8.1.0
+    shadow: 8.1.1
     vanillaGradle: 0.2.1-20220508.185818-34
-    minotaur: 2.7.4
-    loom: 1.1-SNAPSHOT
-    paperweight: 1.5.4
+    minotaur: 2.7.5
+    loom: 1.2-SNAPSHOT
+    paperweight: 1.5.5
 
 dependencies:
     guice:
@@ -59,6 +59,9 @@ dependencies:
     adventureTextSerializerGson:
         group: net.kyori
         name: adventure-text-serializer-gson
+    adventureTextSerializerJson:
+        group: net.kyori
+        name: adventure-text-serializer-json
     miniMessage:
         group: net.kyori
         name: adventure-text-minimessage
