--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -18,7 +18,7 @@ versions:
     configurate: 4.1.2
     adventure: 4.14.0
     examination: 1.3.0
-    adventurePlatformFabric: 5.10.0-SNAPSHOT
+    adventurePlatformFabric: 5.9.0
     paperApi: 1.20.1-R0.1-SNAPSHOT
     bStats: 3.0.0
     fabricApi: 0.83.0+1.20.1
