--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -4,7 +4,8 @@ metadata:
         - plugins
 
 plugins:
-    org.spongepowered.gradle.plugin: 2.1.1
+    org.spongepowered.gradle.plugin: &sg 2.1.1
+    org.spongepowered.gradle.ore: *sg
     xyz.jpenilla.run-paper: 2.1.0
     net.minecrell.plugin-yml.bukkit: 0.5.3
     io.papermc.hangar-publish-plugin: 0.0.5
