paper: set load to STARTUP
Makes the API available earlier in the startup process, allowing more flexibility for addon authors.

We already load quite early on other platforms, Paper was the outlier.

--- a/paper/src/main/resources/plugin.yml
+++ b/paper/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: squaremap
 version: $version
 main: xyz.jpenilla.squaremap.paper.SquaremapPaperBootstrap
+load: STARTUP
 description: $description
 authors:
  - jmp
