Upload actions artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,3 +75,8 @@ jobs:
         env:
           ORE_TOKEN: "${{ secrets.ORE_TOKEN }}"
           RELEASE_NOTES: "${{ github.event.release.body }}"
+      - name: "upload artifacts"
+        uses: actions/upload-artifact@v3
+        with:
+            name: artifacts
+            path: "build/libs/*.jar"
