--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -6,12 +6,12 @@ metadata:
 plugins:
     org.spongepowered.gradle.plugin: &sg 2.2.0
     org.spongepowered.gradle.ore: *sg
-    xyz.jpenilla.run-paper: 2.1.0
+    xyz.jpenilla.run-paper: 2.2.0
     net.minecrell.plugin-yml.bukkit: 0.5.3
-    io.papermc.hangar-publish-plugin: 0.0.5
+    io.papermc.hangar-publish-plugin: 0.1.0
 
 versions:
-    minecraft: '1.20.1'
+    minecraft: '1.20.2'
     checkerQual: 3.38.0
     cloud: 1.8.4
     cloudForge: 1.0.0+1.20-SNAPSHOT
@@ -19,11 +19,11 @@ versions:
     configurate: 4.1.2
     adventure: 4.14.0
     examination: 1.3.0
-    adventurePlatformFabric: 5.9.0
-    paperApi: 1.20.1-R0.1-SNAPSHOT
+    adventurePlatformFabric: 5.10.0-SNAPSHOT
+    paperApi: 1.20.2-R0.1-SNAPSHOT
     bStats: 3.0.2
-    fabricApi: 0.83.0+1.20.1
-    fabricLoader: 0.14.21
+    fabricApi: 0.89.1+1.20.2
+    fabricLoader: 0.14.22
     cardinalComponents: 5.2.2
     guice: 5.1.0
     forge: 1.20.1-47.0.0
