--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -19,7 +19,7 @@ versions:
     configurate: 4.1.2
     adventure: 4.14.0
     examination: 1.3.0
-    adventurePlatformFabric: 5.10.0-SNAPSHOT
+    adventurePlatformFabric: 5.10.0
     paperApi: 1.20.2-R0.1-SNAPSHOT
     bStats: 3.0.2
     fabricApi: 0.89.1+1.20.2
