--- a/gradle/libs.versions.yml
+++ b/gradle/libs.versions.yml
@@ -30,9 +30,8 @@ versions:
 
     # buildSrc
     indra: 3.1.3
-    licenser: 0.6.1
     shadow: 8.1.1
-    vanillaGradle: 0.2.1-20220508.185818-34
+    vanillaGradle: 0.2.1-SNAPSHOT
     minotaur: 2.7.5
     loom: 1.3-SNAPSHOT
     paperweight: 1.5.6
@@ -192,10 +191,6 @@ dependencies:
         group: net.kyori
         name: indra-publishing-sonatype
         version: { ref: indra }
-    licenser:
-        group: gradle.plugin.org.cadixdev.gradle
-        name: licenser
-        version: { ref: licenser }
     shadow:
         group: com.github.johnrengelman
         name: shadow
