--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.0" }
 minecraft = "1.20.2"
 checkerQual = "3.40.0"
 cloud = "1.8.4"
-cloudForge = "1.0.0+1.20-SNAPSHOT"
+cloudNeoForge = "1.0.0+1.20.2-SNAPSHOT"
 cloudSponge = "1.8.0-SNAPSHOT"
 configurate = "4.1.2"
 adventure = "4.14.0"
@@ -20,7 +20,7 @@ fabricApi = "0.89.1+1.20.2"
 fabricLoader = "0.14.22"
 cardinalComponents = "5.3.0"
 guice = "5.1.0"
-forge = "1.20.1-47.0.0"
+neoforge = "20.2.54-beta"
 
 # buildSrc
 indra = "3.1.3"
@@ -28,7 +28,7 @@ sponge-gradle = "2.2.0"
 shadow = "8.1.1"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.4.5"
-loom = "1.3-SNAPSHOT"
+loom = "1.4-SNAPSHOT"
 paperweight = "1.5.10"
 
 [libraries]
@@ -51,7 +51,7 @@ cloudBrigadier = { group = "cloud.commandframework", name = "cloud-brigadier", v
 cloudMinecraftExtras = { group = "cloud.commandframework", name = "cloud-minecraft-extras", version.ref = "cloud" }
 cloudPaper = { group = "cloud.commandframework", name = "cloud-paper", version.ref = "cloud" }
 cloudFabric = { group = "cloud.commandframework", name = "cloud-fabric", version.ref = "cloud" }
-cloudForge = { group = "cloud.commandframework", name = "cloud-forge", version.ref = "cloudForge" }
+cloudNeoForge = { group = "cloud.commandframework", name = "cloud-neoforge", version.ref = "cloudNeoForge" }
 cloudSponge = { group = "cloud.commandframework", name = "cloud-sponge", version.ref = "cloudSponge" }
 
 configurateBom = { group = "org.spongepowered", name = "configurate-bom", version.ref = "configurate" }
@@ -78,7 +78,7 @@ minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft
 cardinalComponentsBase = { group = "dev.onyxstudios.cardinal-components-api", name = "cardinal-components-base", version.ref = "cardinalComponents" }
 cardinalComponentsEntity = { group = "dev.onyxstudios.cardinal-components-api", name = "cardinal-components-entity", version.ref = "cardinalComponents" }
 
-forge = { group = "net.minecraftforge", name = "forge", version.ref = "forge" }
+neoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
 
 # buildSrc
 indraCommon = { group = "net.kyori", name = "indra-common", version.ref = "indra" }
