--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,7 @@
             "matchPackageNames": [
                 "net.fabricmc.fabric-api:fabric-api",
                 "net.fabricmc.fabric-api:fabric-api-deprecated",
-                "cloud.commandframework:cloud-forge"
+                "cloud.commandframework:cloud-neoforge"
             ],
             "versioning": "regex:^(?<major>\\d+)(\\.(?<minor>\\d+))?(\\.(?<patch>\\d+))?(?:\\+(?<compatibility>.*))?$"
         },
