Update Fabric platform

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,14 +13,14 @@ cloudSponge = "1.8.0-SNAPSHOT"
 configurate = "4.1.2"
 adventure = "4.14.0"
 examination = "1.3.0"
-adventurePlatformFabric = "5.10.1"
+adventurePlatformFabric = "5.10.2-SNAPSHOT"
 paperApi = "1.20.4-R0.1-SNAPSHOT"
 bStats = "3.0.2"
 fabricApi = "0.91.1+1.20.4"
-fabricLoader = "0.15.0"
-cardinalComponents = "5.3.0"
+fabricLoader = "0.15.1"
+cardinalComponents = "5.4.0"
 guice = "5.1.0"
-neoforge = "20.4.2-beta"
+neoforge = "20.4.4-beta"
 
 # buildSrc
 indra = "3.1.3"
