--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ run-paper = { id = "xyz.jpenilla.run-paper", version = "2.2.2" }
 hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.0" }
 
 [versions]
-minecraft = "1.20.2"
+minecraft = "1.20.4"
 checkerQual = "3.40.0"
 cloud = "1.8.4"
 cloudNeoForge = "1.0.0+1.20.2-SNAPSHOT"
@@ -13,14 +13,14 @@ cloudSponge = "1.8.0-SNAPSHOT"
 configurate = "4.1.2"
 adventure = "4.14.0"
 examination = "1.3.0"
-adventurePlatformFabric = "5.10.1"
-paperApi = "1.20.2-R0.1-SNAPSHOT"
+adventurePlatformFabric = "5.10.2-SNAPSHOT"
+paperApi = "1.20.4-R0.1-SNAPSHOT"
 bStats = "3.0.2"
-fabricApi = "0.91.1+1.20.2"
-fabricLoader = "0.15.0"
-cardinalComponents = "5.3.0"
+fabricApi = "0.91.1+1.20.4"
+fabricLoader = "0.15.1"
+cardinalComponents = "5.4.0"
 guice = "5.1.0"
-neoforge = "20.2.86"
+neoforge = "20.4.4-beta"
 
 # buildSrc
 indra = "3.1.3"
