--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+group=xyz.jpenilla
+version=1.2.3-SNAPSHOT
+description=Minimalistic and lightweight world map viewer for Minecraft servers
+
 githubUrl=https://github.com/jpenilla/squaremap/
 
 org.gradle.parallel=true
