--- a/paper/src/main/resources/plugin.yml
+++ b/paper/src/main/resources/plugin.yml
@@ -6,5 +6,5 @@ description: $description
 authors:
  - jmp
 website: $website
-api-version: $apiVersion
+api-version: '$apiVersion'
 folia-supported: true
