--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,9 +11,10 @@ cloud = "1.8.4"
 cloudNeoForge = "1.0.0+1.20.2-SNAPSHOT"
 cloudSponge = "1.8.0-SNAPSHOT"
 configurate = "4.1.2"
-adventure = "4.14.0"
+adventure = "4.15.0"
 examination = "1.3.0"
-adventurePlatformFabric = "5.10.2-SNAPSHOT"
+option = "1.0.0"
+adventurePlatformFabric = "5.11.0-SNAPSHOT"
 paperApi = "1.20.4-R0.1-SNAPSHOT"
 bStats = "3.0.2"
 fabricApi = "0.91.1+1.20.4"
@@ -45,6 +46,7 @@ adventurePlatformFabric = { group = "net.kyori", name = "adventure-platform-fabr
 adventureKey = { group = "net.kyori", name = "adventure-key" }
 examinationApi = { group = "net.kyori", name = "examination-api", version.ref = "examination" }
 examinationString = { group = "net.kyori", name = "examination-string", version.ref = "examination" }
+option = { group = "net.kyori", name = "option", version.ref = "option" }
 
 cloudCore = { group = "cloud.commandframework", name = "cloud-core", version.ref = "cloud" }
 cloudBrigadier = { group = "cloud.commandframework", name = "cloud-brigadier", version.ref = "cloud" }
