--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,11 +14,11 @@ configurate = "4.1.2"
 adventure = "4.15.0"
 examination = "1.3.0"
 option = "1.0.0"
-adventurePlatformFabric = "5.11.0-SNAPSHOT"
+adventurePlatformFabric = "5.11.0"
 paperApi = "1.20.4-R0.1-SNAPSHOT"
 bStats = "3.0.2"
-fabricApi = "0.91.1+1.20.4"
-fabricLoader = "0.15.3"
+fabricApi = "0.95.0+1.20.4"
+fabricLoader = "0.15.6"
 cardinalComponents = "5.4.0"
 guice = "5.1.0"
 neoforge = "20.4.43-beta"
@@ -29,7 +29,7 @@ sponge-gradle = "2.2.0"
 shadow = "8.1.1"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.4.5"
-loom = "1.4-SNAPSHOT"
+loom = "1.5-SNAPSHOT"
 paperweight = "1.5.11"
 
 [libraries]
