--- a/renovate.json
+++ b/renovate.json
@@ -16,8 +16,7 @@
             "description": "Correct version handling for dependencies with format major.minor.patch+mcver",
             "matchPackageNames": [
                 "net.fabricmc.fabric-api:fabric-api",
-                "net.fabricmc.fabric-api:fabric-api-deprecated",
-                "cloud.commandframework:cloud-neoforge"
+                "net.fabricmc.fabric-api:fabric-api-deprecated"
             ],
             "versioning": "regex:^(?<major>\\d+)(\\.(?<minor>\\d+))?(\\.(?<patch>\\d+))?(?:\\+(?<compatibility>.*))?$"
         },
