--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,9 +9,9 @@ javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = 
 minecraft = "1.20.4"
 checkerQual = "3.42.0"
 cloud = "2.0.0-beta.1"
-cloudMinecraft = "2.0.0-SNAPSHOT"
+cloudMinecraft = "2.0.0-beta.1"
 cloudProcessors = "1.0.0-SNAPSHOT"
-cloudModded = "2.0.0-SNAPSHOT"
+cloudModded = "2.0.0-beta.1"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.1.2"
 adventure = "4.16.0"
