--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ minecraft = "1.20.4"
 checkerQual = "3.42.0"
 cloud = "2.0.0-beta.1"
 cloudMinecraft = "2.0.0-beta.1"
-cloudProcessors = "1.0.0-SNAPSHOT"
+cloudProcessors = "1.0.0-beta.1"
 cloudModded = "2.0.0-beta.1"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.1.2"
