--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ minecraft = "1.20.4"
 checkerQual = "3.42.0"
 cloud = "2.0.0-beta.2"
 cloudMinecraft = "2.0.0-beta.2"
-cloudProcessors = "1.0.0-SNAPSHOT"
+cloudProcessors = "1.0.0-beta.2"
 cloudModded = "2.0.0-beta.2"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.1.2"
@@ -53,6 +53,7 @@ option = { group = "net.kyori", name = "option", version.ref = "option" }
 
 cloudBom = { module = "org.incendo:cloud-bom", version.ref = "cloud" }
 cloudCore = { group = "org.incendo", name = "cloud-core", version.ref = "cloud" }
+cloudProcessorsBom = { module = "org.incendo:cloud-processors-bom", version.ref = "cloudProcessors" }
 cloudProcessorsCommon = { group = "org.incendo", name = "cloud-processors-common", version.ref = "cloudProcessors" }
 cloudConfirmation = { group = "org.incendo", name = "cloud-processors-confirmation", version.ref = "cloudProcessors" }
 cloudMinecraftBom = { module = "org.incendo:cloud-minecraft-bom", version.ref = "cloudMinecraft" }
