--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [plugins]
 sponge-gradle-plugin = { id = "org.spongepowered.gradle.plugin", version.ref = "sponge-gradle" }
 sponge-gradle-ore = { id = "org.spongepowered.gradle.ore", version.ref = "sponge-gradle" }
-run-paper = { id = "xyz.jpenilla.run-paper", version = "2.2.2" }
-hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.1" }
+run-paper = { id = "xyz.jpenilla.run-paper", version = "2.2.3" }
+hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.2" }
+javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.12" }
 
 [versions]
 minecraft = "1.20.4"
@@ -25,10 +26,10 @@ neoforge = "20.4.167"
 
 # buildSrc
 indra = "3.1.3"
-sponge-gradle = "2.2.0"
+sponge-gradle = "2.2.1-SNAPSHOT"
 shadow = "8.1.1"
 vanillaGradle = "0.2.1-SNAPSHOT"
-mod-publish-plugin = "0.4.5"
+mod-publish-plugin = "0.5.1"
 loom = "1.5-SNAPSHOT"
 paperweight = "1.5.11"
 
