--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,7 @@ neoforge = "20.4.167"
 
 # buildSrc
 indra = "3.1.3"
-sponge-gradle = "2.2.1-SNAPSHOT"
+sponge-gradle = "2.2.0"
 shadow = "8.1.1"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.5.1"
