--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,15 +8,17 @@ javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = 
 [versions]
 minecraft = "1.20.4"
 checkerQual = "3.42.0"
-cloud = "1.8.4"
-cloudNeoForge = "1.0.0+1.20.4-SNAPSHOT"
-cloudSponge = "1.8.0-SNAPSHOT"
+cloud = "2.0.0-beta.4"
+cloudMinecraft = "2.0.0-beta.5"
+cloudProcessors = "1.0.0-beta.2"
+cloudModded = "2.0.0-beta.4"
+cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.1.2"
 adventure = "4.16.0"
 examination = "1.3.0"
 option = "1.0.0"
 adventurePlatformFabric = "5.12.0"
-paperApi = "1.20.4-R0.1-SNAPSHOT"
+paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.0.2"
 fabricApi = "0.95.0+1.20.4"
 fabricLoader = "0.15.6"
@@ -49,13 +51,18 @@ examinationApi = { group = "net.kyori", name = "examination-api", version.ref = 
 examinationString = { group = "net.kyori", name = "examination-string", version.ref = "examination" }
 option = { group = "net.kyori", name = "option", version.ref = "option" }
 
-cloudCore = { group = "cloud.commandframework", name = "cloud-core", version.ref = "cloud" }
-cloudBrigadier = { group = "cloud.commandframework", name = "cloud-brigadier", version.ref = "cloud" }
-cloudMinecraftExtras = { group = "cloud.commandframework", name = "cloud-minecraft-extras", version.ref = "cloud" }
-cloudPaper = { group = "cloud.commandframework", name = "cloud-paper", version.ref = "cloud" }
-cloudFabric = { group = "cloud.commandframework", name = "cloud-fabric", version.ref = "cloud" }
-cloudNeoForge = { group = "cloud.commandframework", name = "cloud-neoforge", version.ref = "cloudNeoForge" }
-cloudSponge = { group = "cloud.commandframework", name = "cloud-sponge", version.ref = "cloudSponge" }
+cloudBom = { module = "org.incendo:cloud-bom", version.ref = "cloud" }
+cloudCore = { group = "org.incendo", name = "cloud-core", version.ref = "cloud" }
+cloudProcessorsBom = { module = "org.incendo:cloud-processors-bom", version.ref = "cloudProcessors" }
+cloudProcessorsCommon = { group = "org.incendo", name = "cloud-processors-common", version.ref = "cloudProcessors" }
+cloudConfirmation = { group = "org.incendo", name = "cloud-processors-confirmation", version.ref = "cloudProcessors" }
+cloudMinecraftBom = { module = "org.incendo:cloud-minecraft-bom", version.ref = "cloudMinecraft" }
+cloudBrigadier = { group = "org.incendo", name = "cloud-brigadier", version.ref = "cloudMinecraft" }
+cloudMinecraftExtras = { group = "org.incendo", name = "cloud-minecraft-extras", version.ref = "cloudMinecraft" }
+cloudPaper = { group = "org.incendo", name = "cloud-paper", version.ref = "cloudMinecraft" }
+cloudFabric = { group = "org.incendo", name = "cloud-fabric", version.ref = "cloudModded" }
+cloudNeoForge = { group = "org.incendo", name = "cloud-neoforge", version.ref = "cloudModded" }
+cloudSponge = { group = "org.incendo", name = "cloud-sponge", version.ref = "cloudSponge" }
 
 configurateBom = { group = "org.spongepowered", name = "configurate-bom", version.ref = "configurate" }
 configurateCore = { group = "org.spongepowered", name = "configurate-core" }
