--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ fabricLoader = "0.15.6"
 cardinalComponents = "5.4.0"
 guice = "7.0.0"
 neoforge = "20.4.214"
+htmlSanitizer = "20240325.1"
 
 # buildSrc
 indra = "3.1.3"
@@ -76,7 +77,9 @@ paperApi = { group = "io.papermc.paper", name = "paper-api", version.ref = "pape
 undertow = { group = "io.undertow", name = "undertow-core", version = "2.3.12.Final" }
 jBossLoggingAnnotations = { group = "org.jboss.logging", name = "jboss-logging-annotations", version = "2.2.1.Final" }
 
-htmlSanitizer = { group = "com.googlecode.owasp-java-html-sanitizer", name = "owasp-java-html-sanitizer", version = "20240325.1" }
+htmlSanitizer = { group = "com.googlecode.owasp-java-html-sanitizer", name = "owasp-java-html-sanitizer", version.ref = "htmlSanitizer" }
+htmlSanitizerJ8 = { group = "com.googlecode.owasp-java-html-sanitizer", name = "java8-shim", version.ref = "htmlSanitizer" }
+htmlSanitizerJ10 = { group = "com.googlecode.owasp-java-html-sanitizer", name = "java10-shim", version.ref = "htmlSanitizer" }
 
 mixin = { group = "org.spongepowered", name = "mixin", version = "0.8.5" }
 
