--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,10 +17,10 @@ configurate = "4.1.2"
 adventure = "4.17.0-SNAPSHOT"
 examination = "1.3.0"
 option = "1.0.0"
-adventurePlatformFabric = "5.12.0"
+adventurePlatformFabric = "5.13.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.0.2"
-fabricApi = "0.97.7+1.20.5"
+fabricApi = "0.97.8+1.20.5"
 fabricLoader = "0.15.10"
 cardinalComponents = "6.0.0-beta.3"
 guice = "7.0.0"
@@ -34,7 +34,7 @@ shadow = "8.1.7"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.5.1"
 loom = "1.6-SNAPSHOT"
-paperweight = "1.6.1"
+paperweight = "1.6.2"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
