--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,11 +20,11 @@ option = "1.0.0"
 adventurePlatformFabric = "5.13.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.0.2"
-fabricApi = "0.98.0+1.20.6"
+fabricApi = "0.99.0+1.20.6"
 fabricLoader = "0.15.11"
-cardinalComponents = "6.0.0-beta.3"
+cardinalComponents = "6.0.0-pre2"
 guice = "7.0.0"
-neoforge = "20.6.7-beta"
+neoforge = "20.6.72-beta"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
