Update build scripts and move folia-api dependant code to separate project

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -73,6 +73,7 @@ bStatsBukkit = { group = "org.bstats", name = "bstats-bukkit", version.ref = "bS
 
 checkerQual = { group = "org.checkerframework", name = "checker-qual", version.ref = "checkerQual" }
 paperApi = { group = "io.papermc.paper", name = "paper-api", version.ref = "paperApi" }
+foliaApi = "dev.folia:folia-api:1.20.6-R0.1-SNAPSHOT"
 
 undertow = { group = "io.undertow", name = "undertow-core", version = "2.3.13.Final" }
 jBossLoggingAnnotations = { group = "org.jboss.logging", name = "jboss-logging-annotations", version = "2.2.1.Final" }
