--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = 
 minecraft = "1.21"
 checkerQual = "3.44.0"
 cloud = "2.0.0-rc.2"
-cloudMinecraft = "2.0.0-SNAPSHOT"
+cloudMinecraft = "2.0.0-beta.9"
 cloudProcessors = "1.0.0-beta.3"
 cloudModded = "2.0.0-beta.7"
 cloudSponge = "2.0.0-SNAPSHOT"
