cache fabric loom cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           path: |
             .gradle/loom-cache
+            fabric/.gradle/loom-cache
             paper/.gradle/caches/paperweight
             common/build/moddev
             neoforge/build/moddev
