Start adding JSDoc to web source

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "moduleDetection": "force",
     "allowJs": true,
+    "types": ["leaflet"],
 
     // Bundler mode
     "moduleResolution": "bundler",
