--- a/web/package.json
+++ b/web/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "web",
-  "devDependencies": {
-    "@types/leaflet": "^1.9.17",
-    "leaflet": "^1.9.4"
-  },
-  "private": true,
-  "type": "module"
+    "name": "web",
+    "scripts": {
+        "format": "prettier --write .",
+        "lint": "prettier --check . && eslint ."
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.25.1",
+        "@types/leaflet": "^1.9.17",
+        "eslint": "^9.25.1",
+        "globals": "^16.0.0",
+        "leaflet": "^1.9.4",
+        "prettier": "^3.5.3"
+    },
+    "private": true,
+    "type": "module"
 }
